post and get comment tests

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
     <artifactId>json</artifactId>
     <version>20160810</version>
 </dependency>
+    <!-- https://mvnrepository.com/artifact/de.sven-jacobs/loremipsum -->
+<dependency>
+    <groupId>de.sven-jacobs</groupId>
+    <artifactId>loremipsum</artifactId>
+    <version>1.0</version>
+    <scope>test</scope>
+</dependency>
     
   </dependencies>
 
